--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@brainhubeu/react-carousel": "^2.0.4",
     "gatsby": "^3.9.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
