--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "gatsby": "^3.9.1",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-multi-carousel": "^2.6.3"
   },
   "devDependencies": {
     "prettier": "2.3.2"
